[package]
name = "bomper"
edition = "2021"
version = "0.7.0"
description = "bumps versions in files"
homepage = "https://github.com/justinrubek/bomper"
readme = "README.md"
license = "MIT"
repository = "https://github.com/justinrubek/bomper"

[dependencies]
anyhow = "1.0.59"
cargo-lock = "8.0.3"
cargo_metadata = "0.15.3"
cargo_toml = "0.15.2"
conventional_commit_parser = "0.9.4"
gix = "0.62.0"
memmap = "0.7.0"
parking_lot = "0.12.1"
project-base-directory = "0.3.0"
rayon = "1.5.3"
regex = "1.6.0"
ron = "0.8.0"
tempfile = "3.3.0"
thiserror = "1.0.31"
toml = "0.7.3"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.figment]
version = "0.10.6"
features = ["toml", "env"]

[dependencies.semver]
version = "1.0.17"
features = ["serde"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[lib]
path = "src/lib.rs"
name = "bomper"
edition = "2021"
crate-type = ["rlib"]
required-features = []

[[bin]]
path = "src/main.rs"
name = "bomper"
required-features = []
