[package]
name = "bomper"
version = "0.8.0"
edition = "2021"
description = "bumps versions in files"
homepage = "https://github.com/justinrubek/bomper"
readme = "README.md"
license = "MIT"
repository = "https://github.com/justinrubek/bomper"

[dependencies]
anyhow = "1.0.59"
cargo-lock = "10"
cargo_metadata = "0.18"
cargo_toml = "0.20"
chrono = "0.4.38"
console = "0.15.8"
conventional_commit_parser = "0.9.4"
memmap = "0.7.0"
minijinja = "2.0.1"
parking_lot = "0.12.1"
project-base-directory = "0.3.1"
regex = "1.6.0"
ron = "0.8.0"
tempfile = "3.3.0"
thiserror = "1"
toml = "0.7.3"
tracing = "0.1.40"
tracing-subscriber = "0.3"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.gix]
version = "0.67.0"
features = ["tree-editor"]

[dependencies.semver]
version = "1.0.17"
features = ["serde"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.similar]
version = "2.5.0"
features = ["inline"]

[lib]
path = "src/lib.rs"
name = "bomper"
edition = "2021"
crate-type = ["rlib"]
required-features = []

[lints.clippy.pedantic]
level = "warn"
priority = -1
